; ModuleID = '/home/carl/AnghaBench/linux/kernel/trace/extr_trace_events_trigger.c_del_named_trigger.c'
source_filename = "/home/carl/AnghaBench/linux/kernel/trace/extr_trace_events_trigger.c_del_named_trigger.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.event_trigger_data = type { i32, i32* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @del_named_trigger(%struct.event_trigger_data* %0) #0 {
  %2 = alloca %struct.event_trigger_data*, align 8
  store %struct.event_trigger_data* %0, %struct.event_trigger_data** %2, align 8
  %3 = load %struct.event_trigger_data*, %struct.event_trigger_data** %2, align 8
  %4 = getelementptr inbounds %struct.event_trigger_data, %struct.event_trigger_data* %3, i32 0, i32 1
  %5 = load i32*, i32** %4, align 8
  %6 = call i32 @kfree(i32* %5)
  %7 = load %struct.event_trigger_data*, %struct.event_trigger_data** %2, align 8
  %8 = getelementptr inbounds %struct.event_trigger_data, %struct.event_trigger_data* %7, i32 0, i32 1
  store i32* null, i32** %8, align 8
  %9 = load %struct.event_trigger_data*, %struct.event_trigger_data** %2, align 8
  %10 = getelementptr inbounds %struct.event_trigger_data, %struct.event_trigger_data* %9, i32 0, i32 0
  %11 = call i32 @list_del(i32* %10)
  ret void
}

declare dso_local i32 @kfree(i32*) #1

declare dso_local i32 @list_del(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
